[package]
name = "sp_model"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

[dependencies]
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust.git", branch = "runner_actions"}
sp-formal = { git = "https://github.com/sequenceplanner/sp-rust.git", branch = "runner_actions"}
sp-runner = { git = "https://github.com/sequenceplanner/sp-rust.git", branch = "runner_actions"}
# sp-domain = { path = "/Users/martin/sp/sp-rust/sp-domain"}
# sp-formal = { path = "/Users/martin/sp/sp-rust/sp-formal"}
# sp-runner = { path = "/Users/martin/sp/sp-rust/sp-runner"}
r2r = "0.6.2"
serde_json = "1.0"
tokio = { version = "1.9", features = ["full"] }
